# onnxPybind

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  onnxPybind.cpp
